<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SongDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding">

        <TextView
            style="@style/song_details_title"
            android:text="@string/title_text" />

        <TextView
            android:id="@+id/song_title_in_details"
            style="@style/song_details_info" />

        <TextView
            style="@style/song_details_title"
            android:text="@string/artist_text" />

        <TextView
            android:id="@+id/song_artist_in_details"
            style="@style/song_details_info" />

        <TextView
            style="@style/song_details_title"
            android:text="@string/album_text" />

        <TextView
            android:id="@+id/album_title_in_details"
            style="@style/song_details_info" />

        <ImageView
            android:id="@+id/album_ic_in_details"
            android:layout_width="@dimen/album_ic_size"
            android:layout_height="@dimen/album_ic_size"
            app:srcCompat="@drawable/ic_album_default" />
    </LinearLayout>
</ScrollView>

